--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "this is a blockchain demo",
   "main": "index.js",
   "scripts": {
+    "dev": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Yonga",
   "license": "ISC",
   "dependencies": {
     "cli-table": "^0.3.11",
+    "elliptic": "^6.6.1",
     "vorpal": "^1.12.0"
   }
 }
